--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "geoip-lite": "^1.2.0",
     "moment": "^2.17.1",
     "mongoose": "^4.9.7",
+    "node-schedule": "^1.2.1",
     "satellite.js": "^1.3.0",
     "winston": "^2.3.1"
   },
