--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "export NODE_ENV=test || SET NODE_ENV=test && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
+  "engines": {
+    "node": "6.10.3"
+  },
   "author": "Kotokrad",
   "license": "ISC",
   "dependencies": {
